<resources>
    <string name="app_name">Port@firmas</string>
    <string name="app_title">Port@firmas v%s</string>
    <string name="close">Cerrar</string>
    <string name="error">Error</string>
    <string name="server_select">Servidores Portafirmas</string>
    <string name="enable_localrepository">Usar certificados locales</string>
    <string name="enable_clavefirma">Usar certificados remotos</string>
    <string name="enable_dnie">Usar DNIe</string>
    <string name="configure_notifications">Configuraci\u00F3n de notificaciones</string>
    <string name="title_notifications">Port@firmas:\u0020</string>
    <string name="enable_notifications">Habilitar notificaciones</string>
    <string name="disable_notifications">Deshabilitar notificaciones</string>
    <string name="aviso">Aviso</string>
    <string name="see_details">Ver detalle</string>
    <string name="sign_vb">Firmar/V\u00BAB\u00BA</string>
    <string name="sign">Firmar</string>
    <string name="verify">Validar</string>
    <string name="vb">Visto Bueno</string>
    <string name="reject">Rechazar</string>
    <string name="filter">Filtrar</string>
    <string name="nofilter">Eliminar filtro</string>
    <string name="update">Actualizar</string>
    <string name="back">Volver</string>
    <string name="loading">Cargando\u002E\u002E\u002E</string>
    <string name="title_activity_petition_results_list">Lista de peticiones</string>
    <string name="title_unresolved_petition_list">Solicitudes pendientes</string>
    <string name="title_signed_petition_list">Solicitudes firmadas</string>
    <string name="title_rejected_petition_list">Solicitudes rechazadas</string>
    <string name="title_activity_login">Acceso al Portafirmas</string>
    <string name="help">Ayuda</string>
    <string name="settings">Configuraci\u00F3n</string>
    <string name="logout">Cerrar Sesi\u00F3n</string>
    <string name="select_all">Seleccionar todas</string>
    <string name="unselect_all">Quitar selecci\u00F3n</string>
    <string name="see_unresolves">Ver solicitudes pendientes</string>
    <string name="see_rejects">Ver solicitudes rechazadas</string>
    <string name="see_signeds">Ver solicitudes firmadas</string>
    <string name="question_sign_petition">\u00BFDesea firmar la solicitud seleccionada?</string>
    <string name="question_reject_petition">\u00BFDesea rechazar la solicitud seleccionada?</string>
    <string name="yes">S\u00ED</string>
    <string name="no">No</string>
    <string name="title_activity_request_details">Detalles de la petici\u00F3n</string>
    <string name="subject">Asunto</string>
    <string name="ref">Referencia</string>
    <string name="date">Fecha</string>
    <string name="expdate">Fecha de caducidad</string>
    <string name="message">Mensaje</string>
    <string name="application">Aplicaci\u00F3n</string>
    <string name="rejectReason">Motivo de rechazo</string>
    <string name="senders">Remitentes</string>
    <string name="docs">Documentos</string>
    <string name="attached">Anexos</string>
    <string name="details">Detalles</string>
    <string name="sign_lines">L\u00EDneas de firmas</string>
    <string name="no_detail_data">Sin especificar</string>
    <string name="doc_download">Descargas</string>
    <string name="doc_preview">Previsualizar</string>
    <string name="toast_downloading">Descargando el fichero</string>
    <string name="toast_error_previewing">No se ha podido previsualizar el documento</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="signfolder_icon">Logo</string>
    <string name="signfolder_logo">Portafirmas</string>
    <string name="label_presentation_text">Portafirmas es el aplicativo m\u00F3vil de las administraciones p\u00FAblicas para acceder a sus servicios de portafirmas. Para poder acceder al servicio deber\u00E1n haberle dado de alta en el sistema y disponer del certificado digital necesario para su autenticaci\u00F3n.</string>
    <string name="signline_header">L\u00EDnea %1$d de</string>
    <string name="request_notification">Tiene una petici\u00F3n pendiente</string>
    <string name="requests_notification">Tiene %d peticiones pendientes</string>
    <string name="sign_dialog_question">¿Desea continuar con la operaci\u00F3n?</string>
    <string name="loading_doc">Descargando documento\u002E\u002E\u002E</string>
    <string name="signs">Firmas</string>
    <string name="sign_reports">Informe de firmas</string>
    <string name="sign_filename">%1$s_firmado.%2$s</string>
    <string name="sign_report">report_%s.pdf</string>
    <string name="exp_date_requests">Solicitudes pr\u00F3ximas a caducar</string>
    <string name="reminding_requests">Solicitudes pendientes</string>
    <string name="verifiersBtn">Validadores</string>
    <string name="authorizedBtn">Autorizaciones</string>
    <string name="addRoleBtn">Añadir nuevo</string>
    <string name="searchUserInputField">Buscar usuario por DNI, nombre o sede…</string>
    <string name="ContentDescriptionSearchBtn">Bot\u00F3n de b\u00FAsqueda de usuario.</string>
    <string name="choose_role_message">Por favor, seleccione el rol con el que desea acceder:</string>
    <string name="identifier">Identificador</string>
    <string name="endDate">Revocaci\u00F3n</string>
    <string name="status_key">Estado</string>
    <string name="input_output_key">Enviada / Recibida </string>
    <string name="empty_field_value">-</string>
    <string name="type_key">Tipo</string>
    <string name="name_key">Nombre</string>
    <string name="start_date_key">Fecha inicio</string>
    <string name="end_date_key">Fecha fin</string>
    <string name="empty_user_list_msg">Sin resultados. No se ha encontrado ning\u00FAn usuario que coincida con el filtro introducido.</string>
    <string name="error_user_list_msg">Se ha producido un error y no ha sido posible realizar la b\u00FAsqueda de usuarios.</string>
    <string name="dialog_msg_info_date_auth">La fecha de inicio debe ser posterior a la de fin.</string>
    <string name="header_title_list_apps">Aplicaciones</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="user_data_header">Datos de usuario</string>
    <string name="additional_params">Par\u00E1metros adicionales</string>
    <string name="auth_type_in">Recibida</string>
    <string name="auth_type_out">Enviada</string>
    <string name="verified">Validada</string>
    <string name="pending">Pendiente de validación</string>
    <string name="revocked">Revocada</string>
    <string name="rejected">Rechazada</string>
    <string name="dni">DNI</string>
    <string name="select_view">Seleccione una vista</string>
    <string name="views">Vistas</string>
    <string name="compact_view">Vista compacta</string>
    <string name="extended_view">Vista expandida</string>
    <string name="change_role">Cambiar rol</string>
    <string name="dialog_msg_confirm_new_valitor">¿Desea dar de alta a %1s como su nuevo validador?</string>
    <string name="dialog_msg_confirm_remove_validator">¿Desea dar de baja a %1s como validador?</string>
    <string name="dialog_msg_pending_authorizations">Tiene autorizaciones pendientes de aceptar o rechazar.</string>
    <string name="download">Descargar</string>
    <string name="share">Compartir</string>
    <string name="toast_error_sharing">Error al compartir el documento</string>
    <string name="notif_download_file_title">Archivo descargado</string>
    <string name="toast_error_saving">Error al guardar el documento</string>
    <string name="toast_error_donwloading">Error al descargar el documento</string>
    <string name="button_import_cert">Importar certificado</string>
    <string name="button_login">Acceder</string>
    <string name="button_choose_role_authorized">Acceder como autorizado</string>
    <string name="button_choose_role_verifier">Acceder como validador</string>
    <string name="button_choose_role_signer">Acceder como firmante</string>
    <string name="button_back">Volver</string>
    <string name="approves_header_list">%1$s visto bueno</string>
    <string name="signatures_header_list">%1$s firma</string>
    <string name="signature_lines_header_list">Firma en %1$s</string>
    <string name="no_request_avaible">No hay peticiones en este listado</string>
    <string name="pagination_separator">%1$d/%2$d</string>
    <string name="img_cd_previous_page">Previous page</string>
    <string name="img_cd_next_page">Next page</string>
    <string name="img_cd_first_page">First page</string>
    <string name="img_cd_last_page">End page</string>
    <string name="no_user_available">No hay usuarios configurados</string>
    <string name="title_configure_filter">Filtrado de peticiones</string>
    <string name="label_order">Ordenaci\u00F3n</string>
    <string name="label_order_rule">Criterio</string>
    <string name="label_filters">Filtros</string>
    <string name="label_filters_enable">Activar filtros</string>
    <string name="label_filters_by_subject">Asunto</string>
    <string name="label_filters_by_app">Aplicaci\u00F3n</string>
    <string name="label_filters_by_date_start">Fecha inicio</string>
    <string name="label_filters_by_date_end">Fecha fin</string>
    <string name="label_filters_show_verified_rq">Mostrar peticiones no validadas</string>
    <string name="label_filters_enable_application">Habilitar validador en aplicaciones</string>
    <string name="label_filters_by_type">Tipo de petici\u00F3n</string>
    <string name="label_filters_month">Intervalo</string>
    <string name="label_filters_year">A\u00F1o</string>
    <string name="nopermtobrowsekeystore">Es necesario conceder permisos para cargar un almac\u00E9n de certificados del dispositivo</string>
    <string name="nopermtopreviewdocs">Es necesario conceder permisos para guardar temporalmente los documentos en local</string>
    <string name="nopermtoopenhelp">Es necesario conceder permisos para extraer el fichero de ayuda</string>
    <string name="nopermtoshownotifications">Es necesario conceder permisos para recibir notificaciones</string>
    <string name="error_msg_select_any_request">Seleccione al menos una solicitud de firma</string>
    <string name="error_msg_certificate_encoding">Error de codificaci\u00F3n del certificado</string>
    <string name="error_msg_communicating_server">Ha ocurrido un error de comunicaci\u00F3n con el servidor</string>
    <string name="error_msg_responding_server">Se obtuvo una respuesta incorrecta del servidor</string>
    <string name="error_msg_loading_requests">Error al cargar la lista de peticiones</string>
    <string name="error_msg_loading_request_details">Error al cargar los detalles de la petici\u00F3n</string>
    <string name="accessibility_icon_auth_status">Estado de la autorizaci\u00F3n</string>
    <string name="wizard_button_omit">Omitir</string>
    <string name="wizard_option_arrow">〉</string>
    <string name="wizard_certorigin_title">¿Qué tipo de certificado desea utilizar?</string>
    <string name="wizard_certorigin_option1_title">Certificado local</string>
    <string name="wizard_certorigin_option1_body">Copie el certificado a su dispositivo e importelo mediante la opción "Importar certificado" de la pantalla principal.</string>
    <string name="wizard_certorigin_option2_title">Certificado remoto</string>
    <string name="wizard_certorigin_option2_body">Utilice sus certificados de autenticación y firma de Cl@ve Permanente. Deberá haberse dado de alta en Cl@ve con el nivel avanzado y activado su usuario de Cl@ve Permanente.</string>
    <string name="wizard_certorigin_footnote1">Más información sobre Cl@ve:</string>
    <string name="wizard_certorigin_hyperlink"><a href="https://clave.gob.es/clave_Home/registro.html">https://clave.gob.es/clave_Home/registro.html</a></string>
</resources>