<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/refresh" android:title="@string/update" />
    <item android:id="@+id/filter" android:icon="@drawable/icon_filter" android:title="@string/filter"/>
    <item android:id="@+id/no_filter" android:icon="@drawable/icon_no_filter" android:title="@string/nofilter" android:visible="false"/>
    <item android:id="@+id/select_all" android:title="@string/select_all"/>
	<item android:id="@+id/unselect_all" android:title="@string/unselect_all" android:visible="false"/>
	<item android:id="@+id/see_rejects" android:title="@string/see_rejects"/>
    <item android:id="@+id/see_signeds" android:title="@string/see_signeds"/>
    <item android:id="@+id/notifications" android:title="@string/enable_notifications" android:visible="false"/>

    <item
        android:id="@+id/setting"
        android:alphabeticShortcut="S"
        android:title="@string/settings" />

    <item
        android:id="@+id/views"
        android:alphabeticShortcut="V"
        android:title="@string/views" />

    <item
        android:id="@+id/changeRole"
        android:alphabeticShortcut="R"
        android:title="@string/change_role" />
    <item android:id="@+id/help" android:alphabeticShortcut="H" android:title="@string/help"/>
    <item android:id="@+id/logout" android:alphabeticShortcut="L" android:title="@string/logout"/>
</menu>
