<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/refresh" android:icon="@drawable/icon_refresh" android:title="@string/update" android:showAsAction="ifRoom"></item>
    <item android:id="@+id/filter" android:icon="@drawable/icon_filter" android:title="@string/filter"></item>
    <item android:id="@+id/no_filter" android:icon="@drawable/icon_no_filter" android:title="@string/nofilter" android:visible="false"></item>
    <item android:id="@+id/see_unresolveds" android:title="@string/see_unresolves"></item>
    <item android:id="@+id/see_signeds" android:title="@string/see_signeds"></item>
    <item android:id="@+id/notifications" android:title="@string/enable_notifications" android:visible="false"></item>
    <!-- TODO: descomentar cuando el servicio de creación roles y busqueda de usuarios este disponible en portafirmas-web.
    <item
        android:id="@+id/setting"
        android:alphabeticShortcut="S"
        android:title="@string/settings" />
        -->
    <item
        android:id="@+id/changeRole"
        android:alphabeticShortcut="R"
        android:title="@string/change_role" />
    <item android:id="@+id/help" android:alphabeticShortcut="H" android:title="@string/help"></item>
    <item android:id="@+id/logout" android:alphabeticShortcut="L" android:title="@string/logout"></item>
</menu>